// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlGroup  With Checkboxes renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
    id="control-group-:r0:"
  >
    <fieldset
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
        <span
          class="css-axuon-boxStyles"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:r2:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-a"
                id="checkbox-:r2:"
                name=":r1:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:r3:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-b"
                id="checkbox-:r3:"
                name=":r1:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:r4:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-c"
                id="checkbox-:r4:"
                name=":r1:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:r5:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-d"
                id="checkbox-:r5:"
                name=":r1:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`ControlGroup  With Checkboxes renders correctly when invalid 1`] = `
<div>
  <div
    class="css-1n67ua0-boxStyles-FieldContainer"
    id="control-group-:ri:"
  >
    <fieldset
      aria-describedby="control-group-:ri:-message control-group-:ri:-hint"
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
        <span
          class="css-axuon-boxStyles"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <span
          class="css-1jndov8-boxStyles"
          id="control-group-:ri:-hint"
        >
          Hint text
        </span>
        <div
          class="css-1xkbxzi-boxStyles"
        >
          <div
            class="css-1ldvxqr-boxStyles"
          >
            <svg
              aria-hidden="false"
              aria-label="Error"
              class="css-rg60c6-FieldMessage"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </div>
          <span
            class="css-o7cidz-boxStyles"
            id="control-group-:ri:-message"
          >
            Error message
          </span>
        </div>
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rk:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-describedby="control-group-:ri:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-a"
                id="checkbox-:rk:"
                name=":rj:"
                type="checkbox"
              />
              <span
                class="css-80qi0p-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rl:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-describedby="control-group-:ri:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-b"
                id="checkbox-:rl:"
                name=":rj:"
                type="checkbox"
              />
              <span
                class="css-80qi0p-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rm:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-describedby="control-group-:ri:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-c"
                id="checkbox-:rm:"
                name=":rj:"
                type="checkbox"
              />
              <span
                class="css-80qi0p-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rn:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-describedby="control-group-:ri:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-d"
                id="checkbox-:rn:"
                name=":rj:"
                type="checkbox"
              />
              <span
                class="css-80qi0p-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`ControlGroup  With Checkboxes renders correctly when required 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
    id="control-group-:rc:"
  >
    <fieldset
      aria-describedby="control-group-:rc:-hint"
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <span
          class="css-1jndov8-boxStyles"
          id="control-group-:rc:-hint"
        >
          Hint text
        </span>
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:re:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="true"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-a"
                id="checkbox-:re:"
                name=":rd:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rf:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="true"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-b"
                id="checkbox-:rf:"
                name=":rd:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rg:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="true"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-c"
                id="checkbox-:rg:"
                name=":rd:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-hp3wbe-boxStyles-CheckboxContainer"
            for="checkbox-:rh:"
          >
            <span
              class="css-lhbzwe-Checkbox"
            >
              <input
                aria-required="true"
                class="css-1iw6cs3-CheckboxInput"
                data-testid="option-d"
                id="checkbox-:rh:"
                name=":rd:"
                type="checkbox"
              />
              <span
                class="css-5q1w1y-boxStyles-CheckboxIndicator"
              >
                <svg
                  aria-hidden="true"
                  class="css-lewdp2-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 6 9 17l-5-5"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1f6xqkn-boxStyles-CheckboxLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`ControlGroup  With Radios renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
    id="control-group-:r14:"
  >
    <fieldset
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
        <span
          class="css-axuon-boxStyles"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r16:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-a"
                id="radio-:r16:"
                name=":r15:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r17:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-b"
                id="radio-:r17:"
                name=":r15:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r18:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-c"
                id="radio-:r18:"
                name=":r15:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r19:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-d"
                id="radio-:r19:"
                name=":r15:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`ControlGroup  With Radios renders correctly when invalid 1`] = `
<div>
  <div
    class="css-1n67ua0-boxStyles-FieldContainer"
    id="control-group-:r1m:"
  >
    <fieldset
      aria-describedby="control-group-:r1m:-message control-group-:r1m:-hint"
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
        <span
          class="css-axuon-boxStyles"
        >
           
          (optional)
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <span
          class="css-1jndov8-boxStyles"
          id="control-group-:r1m:-hint"
        >
          Hint text
        </span>
        <div
          class="css-1xkbxzi-boxStyles"
        >
          <div
            class="css-1ldvxqr-boxStyles"
          >
            <svg
              aria-hidden="false"
              aria-label="Error"
              class="css-rg60c6-FieldMessage"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
                fill="currentColor"
                stroke="none"
              />
            </svg>
          </div>
          <span
            class="css-o7cidz-boxStyles"
            id="control-group-:r1m:-message"
          >
            Error message
          </span>
        </div>
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1o:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-describedby="control-group-:r1m:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-a"
                id="radio-:r1o:"
                name=":r1n:"
                type="radio"
              />
              <span
                class="css-11u7vp8-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1p:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-describedby="control-group-:r1m:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-b"
                id="radio-:r1p:"
                name=":r1n:"
                type="radio"
              />
              <span
                class="css-11u7vp8-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1q:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-describedby="control-group-:r1m:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-c"
                id="radio-:r1q:"
                name=":r1n:"
                type="radio"
              />
              <span
                class="css-11u7vp8-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1r:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-describedby="control-group-:r1m:-message"
                aria-invalid="true"
                aria-required="false"
                class="css-w4mqhh-RadioInput"
                data-testid="option-d"
                id="radio-:r1r:"
                name=":r1n:"
                type="radio"
              />
              <span
                class="css-11u7vp8-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`ControlGroup  With Radios renders correctly when required 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
    id="control-group-:r1g:"
  >
    <fieldset
      aria-describedby="control-group-:r1g:-hint"
      class="css-79i25n-boxStyles"
    >
      <legend
        class="css-79i25n-boxStyles"
      >
        <span
          class="css-1jywj6f-boxStyles"
        >
          Control group label
        </span>
      </legend>
      <div
        class="css-1ypnbyi-boxStyles-ControlGroup"
      >
        <span
          class="css-1jndov8-boxStyles"
          id="control-group-:r1g:-hint"
        >
          Hint text
        </span>
        <div
          class="css-1lk80kr-boxStyles"
        >
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1i:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="true"
                class="css-w4mqhh-RadioInput"
                data-testid="option-a"
                id="radio-:r1i:"
                name=":r1h:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option A
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1j:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="true"
                class="css-w4mqhh-RadioInput"
                data-testid="option-b"
                id="radio-:r1j:"
                name=":r1h:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option B
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1k:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="true"
                class="css-w4mqhh-RadioInput"
                data-testid="option-c"
                id="radio-:r1k:"
                name=":r1h:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option C
            </span>
          </label>
          <label
            class="css-6pplfb-boxStyles-RadioContainer"
            for="radio-:r1l:"
          >
            <span
              class="css-1i46ndm-Radio"
            >
              <input
                aria-required="true"
                class="css-w4mqhh-RadioInput"
                data-testid="option-d"
                id="radio-:r1l:"
                name=":r1h:"
                type="radio"
              />
              <span
                class="css-1ab3tn0-boxStyles-RadioIndicator"
              >
                <span
                  class="css-erbirp-boxStyles-RadioIndicator"
                />
              </span>
            </span>
            <span
              class="css-1vx6497-boxStyles-RadioLabel"
            >
              Option D
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
